--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1326,15 +1326,17 @@ a:focus {
 
 
 .portfolio-modal .modal-content {
-    padding: 20px 0;
-    min-height: 100%;
-    border: 0;
     border-radius: 0;
-    text-align: center;
     background-clip: border-box;
     -webkit-box-shadow: none;
     box-shadow: none;
+    border: 0;
+    min-height: 100%;
+    padding: 100px 0;
+    text-align: center;
 }
+
+
 
 .portfolio-modal .modal-content h2 {
     margin: 0;
@@ -1348,6 +1350,44 @@ a:focus {
 .portfolio-modal .modal-content .item-details {
     margin: 30px 0;
 }
+
+/* Button for Portfolio-modal Closure */
+.portfolio-modal .close-modal{
+  position: absolute;
+  width: 75px;
+  height: 75px;
+  background-color: transparent;
+  top: 25px;
+  right: 25px;
+  cursor: pointer;
+}
+
+.portfolio-modal .close-modal .lr {
+    height: 75px;
+    width: 1px;
+    margin-left: 35px;
+    background-color: #222;
+    transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    z-index: 1051;
+}
+
+.portfolio-modal .close-modal .lr .rl {
+    height: 75px;
+    width: 1px;
+    background-color: #222;
+    transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    z-index: 1052;
+}
+
+.portfolio-modal .close-modal:hover {
+    opacity: .2;
+}
+
+
 
 
 
@@ -1368,6 +1408,7 @@ img {
 
 .img-rounded {
     border-radius: 5px;
+    border: 4px solid #000;
 }
 
 .img-thumbnail {
@@ -1805,8 +1846,8 @@ pre code {
 .container {
     margin-right: auto;
     margin-left: auto;
-    padding-left: 7px;
-    padding-right: 7px
+    padding-left: 15px;
+    padding-right: 15px
 }
 
 .container:after,.container:before {
@@ -6547,7 +6588,7 @@ button.close {
 
 .modal-body {
     position: relative;
-    padding: 30px
+    padding: 20px
 }
 
 .modal-footer {
@@ -7443,7 +7484,8 @@ button.close {
     box-shadow: 0 0 5px 5px #128a73;
     padding: 28px 14px;
     margin-left: -7px;
-    margin-right: -7px
+    margin-right: -7px;
+    border-radius: 30px;
 }
 
 @media (min-width: 480px) {
